# kube-guardian

./: .gitignore  Dockerfile  Makefile  README.md  Taskfile.yaml  ds.yaml  go.mod  go.sum  index.yaml  main.go  network-policy.yaml  nginx.yaml
.github/: CODEOWNERS  renovate.json5
.github/renovate/: autoMerge.json5
.github/workflow/: build.yaml  renovate.yaml
.github/workflows/: advisor-release.yml  advisor-test.yaml  advisor.yaml  broker-release.yaml  broker.yaml  build-docker.yaml  build-go.yaml  build.yaml  charts-docs.yaml  charts-lint.yaml  charts-readme-docs.yaml  charts-release-ghpages.yaml  charts-release.yaml  charts-update.yaml  controller-release.yaml  controller.yaml  cross.yaml  go-ossf-slsa3-publish.yml  release.yaml  renovate.yaml
.slsa-goreleaser/: darwin-amd64.yml  darwin-arm64.yml  linux-amd64.yml  linux-arm64.yml
.slsa-goreleaser/advisor/: darwin-amd64.yml  linux-arm64.yml
.taskfiles/Advisor/: Taskfile.yaml
.taskfiles/Broker/: Taskfile.yaml
.taskfiles/Controller/: Taskfile.yaml
advisor/: Dockerfile  README.md  go.mod  go.sum  main.go
advisor/cmd/: gen.go  main.go  networkpolicy.go  root.go  seccomp.go  version.go
advisor/pkg/api/: pod_syscall.go  pod_traffic.go
advisor/pkg/common/: util.go  util_test.go
advisor/pkg/database/: db.go
advisor/pkg/k8s/: auth.go  cilium_networkpolicies.go  config.go  config_test.go  errors.go  generic.go  generic_test.go  labels.go  labels_test.go  networkgenerators.go  networkpolicies.go  networkpolicies_test.go  pods.go  portforward.go  portforward_test.go  seccomp.go
advisor/pkg/network/: cilium_policy.go  cilium_policy_test.go  common.go  generator.go  generator_test.go  integration_test.go  standard_policy.go  standard_policy_test.go  types.go  types_test.go
broker/: Cargo.toml  Dockerfile  README.md  broker.Dockerfile
broker/db/: diesel.toml  install.md
broker/db/migrations/2023-06-06-070736_pod_traffic/: down.sql  up.sql
broker/db/migrations/2024-06-25-111336_kube-guardian/: up.sql
broker/src/: add.rs  conn.rs  error.rs  get.rs  lib.rs  main.rs  schema.rs  telemetry.rs  types.rs
broker/test/: post.json
charts/kube-guardian/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/kube-guardian/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml
charts/kube-guardian/templates/broker/: deployment.yaml  service.yaml  serviceaccount.yaml
charts/kube-guardian/templates/controller/: daemonset.yaml  serviceaccount.yaml
charts/kube-guardian/templates/database/: deployment.yaml  service.yaml  serviceaccount.yaml
charts/kube-guardian/templates/tests/: test-connection.yaml
cmd/: main.go
controller/: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build.rs  cross.Dockerfile  dependencies.sh  kind.sh  known-issues.md  kubernetes.yaml  requirement.md  seccomp.json  uninstall-xentra.sh
controller/.cargo/: config.toml
controller/docker/: cross.Dockerfile  local.Dockerfile
controller/kube-guardian/: Cargo.toml
controller/kube-guardian-common/: Cargo.toml
controller/kube-guardian-common/src/: lib.rs
controller/kube-guardian-ebpf/: Cargo.toml
controller/kube-guardian-ebpf/src/: bindings.rs  main.rs
controller/kube-guardian/src/: api.rs  cgroup.rs  container.rs  lib.rs  main.rs  model.rs  telemetry.rs  trace.rs  watch.rs
controller/src/: bpf.rs  client.rs  container.rs  error.rs  lib.rs  log.rs  main.rs  models.rs  network.rs  pod_watcher.rs  service_watcher.rs  syscall.rs  tcp.rs  watcher.rs
controller/src/bpf/: network_probe.bpf.c  network_probe.skel.rs  network_probe.skel.rs~Updated upstream  syscall.bpf.c  syscall.skel.rs  tcp_probe.bpf.c  tcp_probe.skel.rs  vmlinux.h  xdp.bpf.c  xdp.skel.rs
controller/xtask/: Cargo.toml
controller/xtask/src/: build_ebpf.rs  codegen.rs  run.rs
kind/: config.yaml
kind/cilium-main/operator/pkg/gateway-api/: httproute.go  tlsroute_reconcile.go
pkg/db/: db.go
pkg/k8s/: k8s.go  networkpolicies.go
scripts/: quick-install.sh
