[package]
name = "broker"
version = "0.1.0"  #:version
authors = ["Mahesh Rayas"]
description = """
api to perform db operation for xentra 
"""
documentation = "https://docs.rs/arx-api"
homepage = "https://github.com/<todo>"
repository = "https://github.com/<todo>"
readme = "README.md"
keywords = ["kubernetes", "k8s"]
license = "Unlicense OR MIT"
edition = "2021"

[[bin]]
name = "broker"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"
bench = false

[dependencies]
dotenv = "0.15.0"
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["postgres","chrono","serde_json","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = {version = "0.1", features = ['log']}
chrono = { version = "0.4.19", features = ["serde"] }
diesel_migrations = "2.1.0"
tracing-subscriber = { version = "0.3.12", features = ["json", "env-filter"] }
