[package]
name = "broker"
version = "0.1.0"  #:version
authors = ["Mahesh Rayas"]
description = """
api to perform db operation for xentra 
"""
documentation = "https://docs.rs/arx-api"
homepage = "https://github.com/<todo>"
repository = "https://github.com/<todo>"
readme = "README.md"
keywords = ["kubernetes", "k8s"]
license = "Unlicense OR MIT"
edition = "2021"

[[bin]]
name = "broker"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"
bench = false

[dependencies]
dotenv = "0.15"
actix-web = "4.11"
diesel = { version = "2.2.6", features = ["postgres","chrono","serde_json","r2d2"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
thiserror = "2.0.16"
tracing = {version = "0.1", features = ['log']}
chrono = { version = "0.4.41", features = ["serde"] }
diesel_migrations = "2.1.0"
tracing-subscriber = { version = "0.3.12", features = ["json", "env-filter"] }