[package]
name = "kube-guardian"
version = "0.1.0"
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.24.8"

[dependencies]
anyhow = "1.0.95"
libbpf-rs = "0.24.8"
libbpf-sys = "1.5.0+v1"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
futures = "0.3.31"
thiserror = "2.0.10"
tracing = "0.1.37"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "local-time"] }
containerd-client = { git = "https://github.com/containerd/rust-extensions", branch = "main" }
regex = "1.11.1"
procfs = "0.17.0"
reqwest = "0.12.12"
uuid = { version = "1.11.0", features = ["v4"]}
chrono = { version = "0.4.23", features = ["serde"] }
openssl = { version = "0.10.68", features = ["vendored"] }
lazy_static = "1.5.0"