[package]
name = "kube-guardian"
version = "0.1.0"
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.25.0"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
anyhow = "1.0.96"
libbpf-rs = "0.25.0"
libbpf-sys = "0.8"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "fs", "time"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["latest"] }
futures = "0.3.31"
thiserror = "2.0"
tracing = "0.1.37"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "local-time"] }
containerd-client = "0.6.0"
regex = "1.11.1"
procfs = "0.17.0"
reqwest = "0.12"
uuid = { version = "1.17", features = ["v4"]}
chrono = { version = "0.4.41", features = ["serde"] }
openssl = { version = "0.10.73", features = ["vendored"] }
lazy_static = "1.5.0"
libseccomp = "0.4"
moka = { version = "0.12.10", features = ["future"]}