[package]
name = "kube-guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kube_guardian"
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
kube = { version = "0.91.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "local-time"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.24.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.17.0", features = ["tokio"], optional = true }
anyhow = "1.0.68"
futures = "0.3.25"
serde = "1.0.114"
serde_derive = "1.0.114"
schemars = { version = "0.8.12", features = ["chrono"] }
serde_json = "1.0.93"
serde_yaml = "0.9.18"
chrono = { version = "0.4.23", features = ["serde"] }
thiserror = "1.0.37"
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
kube-guardian-common = { path = "../kube-guardian-common", features = ["user"] }
bytes = "1.3"
network-types = "0.0.6"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.7.3"
once_cell = "1.17.1"
reqwest = "0.12.4"
uuid = { version = "1.3.4", features = ["v4"]}
lazy_static = "1.4"
containerd-client = { git = "https://github.com/containerd/rust-extensions", branch = "main" }
time = {version="0.3.30" , features = ["local-offset"]}
procfs = "0.16.0"